syntax = "proto3";

package testgrpc;

service Propio {
  rpc Imprimi (usuario) returns (siImprimio) {}
}

message usuario {
  string cualEsNombre = 1;
  string cualEsPassword = 2;
}

message siImprimio {
  bool yaLoImprimio = 1;
}